# sales-transcript-reader

./: LICENSE  README.md  pyproject.toml
src/sales_transcript_reader/app/: anthropic.py  test.py
src/sales_transcript_reader/prompts/: objections.txt
tests/fake-transcripts/: objections.txt
